testing methods, sql scripts